I modified index.html a bit

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>My super Web site</title>
   </head>
   <body>
-  
+  <h1>Hi welcome to my super website </h1>
+  <h2>Here you may assume that im begining to be a full developper</h2>
   </body>
 </html>
